# cgns2openfoam

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md
include/: cgns_reader.h  openfoam_writer.h
src/: cgns_reader.cpp  main.cpp  openfoam_writer.cpp
